[package]
name = "subotai"
version = "1.0.0"
authors = ["PabloMansanet <pablomansanet@gmail.com>"]
description = "Kademlia based DHT"
repository = "https://github.com/PabloMansanet/subotai"
readme = "README.md"
keywords = ["kademlia", "DHT", "p2p", "kad", "network"]
license = "MIT"
license-file = "LICENSE.md"

[dependencies]
itertools = "*"
rand = "*"
bincode = "*"
serde = "*"
serde_macros = "*"
bus = "*"
time = "*"
sha1 = "*"
