[package]
name = "subotai"
version = "1.0.4-pre"
authors = ["PabloMansanet <pablomansanet@gmail.com>"]
description = "Kademlia based DHT"
repository = "https://github.com/PabloMansanet/subotai"
readme = "README.md"
keywords = ["kademlia", "DHT", "p2p", "kad", "network"]
documentation = "https://PabloMansanet.github.io/subotai/subotai"
license = "MIT"

[dependencies]
itertools = "0.*.*"
rand = "0.*.*"
bincode = "0.*.*"
serde_derive = "1.*.*"
bus = "1.*.*"
time = "0.*.*"
sha1 = "0.*.*"

[dependencies.serde]
version = "1.*.*"
features = ["rc"]
